Added the Comments API docs

--- a/content/cloud-docs/api-docs/comments.mdx
+++ b/content/cloud-docs/api-docs/comments.mdx
@@ -38,8 +38,7 @@ page_title: Comments - API Docs - Terraform Cloud and Terraform Enterprise
 
 # Comments API
 
-A Comment represents a Terraform Enterprise comment. 
-
+Comments allow users to leave feedback or record decisions about a run. 
 
 ## List Comments for a Run
 
