--- a/content/cloud-docs/agents/changelog.mdx
+++ b/content/cloud-docs/agents/changelog.mdx
@@ -16,6 +16,12 @@ within each release are categorized into one or more of the following labels:
 Each version below corresponds to a release artifact available for download on
 the official [releases website](https://releases.hashicorp.com/tfc-agent/).
 
+## 1.1.3 (03/17/2022)
+
+SECURITY FIXES:
+
+* Updated Docker image to address OpenSSL CVE-2022-0778 (#129)
+
 ## 1.1.2 (03/11/2022)
 
 BUG FIXES:
