--- a/content/cloud-docs/users-teams-organizations/permissions.mdx
+++ b/content/cloud-docs/users-teams-organizations/permissions.mdx
@@ -94,7 +94,7 @@ Workspace admins have the following permissions on their workspace:
 - Apply runs
 - Lock and unlock workspace
 
-  -> **Note**: Typically, only the user who created the lock can unlock a workspace. Administrators and members of the "Owners" team can use [Force unlock](/docs/cloud/workspaces/settings.html#locking) to override this an unlock a workspace.
+  -> **Note**: Typically, only the user who created the lock can unlock a workspace. Administrators and members of the Owners team can use [Force unlock](/docs/cloud/workspaces/settings.html#locking) to override this and unlock a workspace.
 - Download Sentinel mocks
 - Read and write variables
 - Read and write state versions
