--- a/content/cloud-docs/api-docs/run-tasks.mdx
+++ b/content/cloud-docs/api-docs/run-tasks.mdx
@@ -40,6 +40,8 @@ page_title: Run Tasks - API Docs - Terraform Cloud and Terraform Enterprise
 
 [Run tasks](/cloud-docs/workspaces/settings/run-tasks) allow Terraform Cloud to interact with external systems at specific points in the Terraform Cloud run lifecycle. Run tasks are reusable configurations that you can attach to any workspace in an organization. This page lists the API endpoints for run tasks in an organization and explains how to attach run tasks to workspaces.
 
+You can find more information about the integration API in the [Run Tasks Integration](/cloud-docs/api-docs/run-tasks-integration) documentation.
+
 ## Required Permissions
 
 You need organization owner [permissions](/cloud-docs/users-teams-organizations/permissions) to interact with run tasks and workspace administrator permissions to connect run tasks to workspaces.
