--- a/content/cloud-docs/api-docs/run.mdx
+++ b/content/cloud-docs/api-docs/run.mdx
@@ -67,7 +67,7 @@ The run state is found in `data.attributes.status`, and you can reference the fo
 | `policy_soft_failed`   | A sentinel policy has soft failed for a plan-only run.  This is a final state.                                                                                                                                                                                                                                                                                                                                                     |
 | `policy_checked`       | The sentinel policy checking phase of a run has completed.                                                                                                                                                                                                                                                                                                                                                                         |
 | `confirmed`            | The plan produced by the run has been confirmed.                                                                                                                                                                                                                                                                                                                                                                                   |
-| `planned_and_finished` | The completion of a run containing a plan only, or a run that produces a plan with no changes to apply. This is a final state.                                                                                                                                                                                                                                                                                                    |
+| `planned_and_finished` | The completion of a run containing a plan only, or a run that produces a plan with no changes to apply. This is a final state.                                                                                                                                                                                                                                                                                                     |
 | `apply_queued`         | Once the changes in the plan have been confirmed, the run run will transition to `apply_queued`. This status indicates that the run should start as soon as the backend services that run terraform have available capacity. In Terraform Cloud, you should seldom see this status, as our aim is to always have capacity. However, in Terraform Enterprise this status will be more common due to the self-hosted nature.         |
 | `applying`             | The applying phase of a run is in progress.                                                                                                                                                                                                                                                                                                                                                                                        |
 | `applied`              | The applying phase of a run has completed.                                                                                                                                                                                                                                                                                                                                                                                         |
@@ -107,21 +107,21 @@ This POST endpoint requires a JSON object with the following properties as a req
 
 Properties without a default value are required.
 
-| Key path                                           | Type                 | Default                                            | Description                                                                                                                                                                                                                                |
-|----------------------------------------------------|----------------------|----------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| `data.attributes.auto-apply`                       | bool                 | The current Auto Apply setting in the workspace    | Whether to automatically apply changes when a Terraform plan is successful. Defaults to the [Auto Apply](/cloud-docs/workspaces/settings#auto-apply-and-manual-apply) workspace setting.                                                   |
-| `data.attributes.is-destroy`                       | bool                 | false                                              | Specifies whether this plan is a destroy plan that will destroy all provisioned resources. Mutually exclusive with `refresh-only`.                                                                                                         |
-| `data.attributes.message`                          | string               | "Queued manually via the Terraform Enterprise API" | Specifies the message to be associated with this run.                                                                                                                                                                                      |
-| `data.attributes.refresh`                          | bool                 | true                                               | Specifies whether or not to refresh the state before a plan.                                                                                                                                                                               |
-| `data.attributes.refresh-only`                     | bool                 | false                                              | Whether this run should use the refresh-only plan mode, which will refresh the state without modifying any resources. Mutually exclusive with `is-destroy`.                                                                                |
-| `data.attributes.replace-addrs`                    | array\[string]       |                                                    | Specifies an optional list of resource addresses to be passed to the `-replace` flag.                                                                                                                                                      |
-| `data.attributes.target-addrs`                     | array\[string]       |                                                    | Specifies an optional list of resource addresses to be passed to the `-target` flag.                                                                                                                                                       |
-| `data.attributes.variables`                        | array\[{key, value}] | (empty array)                                      | Specifies an optional list of run-specific variable values. See [Run-Specific Variables](/cloud-docs/workspaces/variables/managing-variables#run-specific-variables) in the Terraform Cloud workspaces documentation for more information. |
-| `data.attributes.plan-only`                        | bool                 | (from configuration version)                       | Specifies if this is a speculative, plan-only run that cannot be applied. Often used in conjunction with terraform-version in order to test whether an upgrade would succeed.                                                              |
-| `data.attributes.terraform-version`                | string               |                                                    | Specifies the Terraform version to use in this run. Only valid for plan-only runs; must be a valid Terraform version available to the organization.                                                                                        |
-| `data.attributes.allow-empty-apply`                | bool                 |                                                    | Specifies whether Terraform can apply the run even when the plan contains no changes. Often used to upgrade state after upgrading a workspace to a new terraform version.                                          |
-| `data.relationships.workspace.data.id`             | string               |                                                    | Specifies the workspace ID where the run will be executed.                                                                                                                                                                                 |
-| `data.relationships.configuration-version.data.id` | string               |                                                    | Specifies the configuration version to use for this run. If the `configuration-version` object is omitted, the run will be created using the workspace's latest configuration version.                                                     |
+| Key path                                           | Type                 | Default                                            | Description                                                                                                                                                                                                                                   |
+|----------------------------------------------------|----------------------|----------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| `data.attributes.auto-apply`                       | bool                 | The current Auto Apply setting in the workspace    | Whether to automatically apply changes when a Terraform plan is successful. Defaults to the [Auto Apply](/cloud-docs/workspaces/settings#auto-apply-and-manual-apply) workspace setting.                                                      |
+| `data.attributes.is-destroy`                       | bool                 | false                                              | Specifies whether this plan is a destroy plan that will destroy all provisioned resources. Mutually exclusive with `refresh-only`.                                                                                                            |
+| `data.attributes.message`                          | string               | "Queued manually via the Terraform Enterprise API" | Specifies the message to be associated with this run.                                                                                                                                                                                         |
+| `data.attributes.refresh`                          | bool                 | true                                               | Specifies whether or not to refresh the state before a plan.                                                                                                                                                                                  |
+| `data.attributes.refresh-only`                     | bool                 | false                                              | Whether this run should use the refresh-only plan mode, which will refresh the state without modifying any resources. Mutually exclusive with `is-destroy`.                                                                                   |
+| `data.attributes.replace-addrs`                    | array\[string]       |                                                    | Specifies an optional list of resource addresses to be passed to the `-replace` flag.                                                                                                                                                         |
+| `data.attributes.target-addrs`                     | array\[string]       |                                                    | Specifies an optional list of resource addresses to be passed to the `-target` flag.                                                                                                                                                          |
+| `data.attributes.variables`                        | array\[{key, value}] | (empty array)                                      | Specifies an optional list of run-specific variable values. See [Run-Specific Variables](/cloud-docs/workspaces/variables/managing-variables#run-specific-variables) in the Terraform Cloud workspaces documentation for more information.    |
+| `data.attributes.plan-only`                        | bool                 | (from configuration version)                       | Specifies if this is a [speculative, plan-only](/cloud-docs/run/modes-and-options#plan-only-speculative-plan) run that cannot be applied. Often used in conjunction with terraform-version in order to test whether an upgrade would succeed. |
+| `data.attributes.terraform-version`                | string               |                                                    | Specifies the Terraform version to use in this run. Only valid for plan-only runs; must be a valid Terraform version available to the organization.                                                                                           |
+| `data.attributes.allow-empty-apply`                | bool                 |                                                    | Specifies whether Terraform can apply the run even when the plan [contains no changes](/cloud-docs/run/modes-and-options#allow-empty-apply). Often used to [upgrade state](/cloud-docs/workspaces/state#upgrading-state) after upgrading a workspace to a new terraform version.                                                                     |
+| `data.relationships.workspace.data.id`             | string               |                                                    | Specifies the workspace ID where the run will be executed.                                                                                                                                                                                    |
+| `data.relationships.configuration-version.data.id` | string               |                                                    | Specifies the configuration version to use for this run. If the `configuration-version` object is omitted, the run will be created using the workspace's latest configuration version.                                                        |
 
 | Status  | Response                               | Reason                                                                      |
 |---------|----------------------------------------|-----------------------------------------------------------------------------|
