--- a/content/cloud-docs/users-teams-organizations/permissions.mdx
+++ b/content/cloud-docs/users-teams-organizations/permissions.mdx
@@ -93,7 +93,7 @@ Admin permissions include the highest level of general permissions for the works
 Workspace admins have all the permissions described in [General Workspace Permissions][], as well as the ability to:
 
 - Read and write workspace settings — this includes general settings, notification configurations, run triggers, and more.
-- Set or remove workspace permissions for visible teams. Workspace admins cannot view or manage teams that are are ["Secret"](/cloud-docs/users-teams-organizations/teams#team-visibility), unless they are also organization owners.
+- Set or remove workspace permissions for visible teams. Workspace admins cannot view or manage teams that are are [Secret](/cloud-docs/users-teams-organizations/teams#team-visibility), unless they are also organization owners.
 - Delete the workspace
 
 ### Fixed Permission Sets
