--- a/content/cloud-docs/users-teams-organizations/permissions.mdx
+++ b/content/cloud-docs/users-teams-organizations/permissions.mdx
@@ -90,7 +90,7 @@ Much like the owners team has full control over an organization, each workspace 
 
 Admin permissions include the highest level of general permissions for the workspace. There are also some permissions that are only available to workspace admins, which generally involve changing the workspace's settings or setting access levels for other teams.
 
-Workspace admins have all the permissions described in [General Workspace Permissions][], as well as the ability to:
+Workspace admins have all [General Workspace Permissions][], as well as the ability to do the following tasks:
 
 - Read and write workspace settings — this includes general settings, notification configurations, run triggers, and more.
 - Set or remove workspace permissions for visible teams. Workspace admins cannot view or manage teams that are are [Secret](/cloud-docs/users-teams-organizations/teams#team-visibility), unless they are also organization owners.
