--- a/content/cloud-docs/users-teams-organizations/permissions.mdx
+++ b/content/cloud-docs/users-teams-organizations/permissions.mdx
@@ -90,21 +90,11 @@ Much like the owners team has full control over an organization, each workspace 
 
 Admin permissions include the highest level of general permissions for the workspace. There are also some permissions that are only available to workspace admins, which generally involve changing the workspace's settings or setting access levels for other teams.
 
-Workspace admins have the following permissions on their workspace:
+Workspace admins have all [General Workspace Permissions][], as well as the ability to do the following tasks:
 
-- Apply runs
-- Lock and unlock workspace
-
-  -> **Note**: Typically, only the user who created the lock can unlock a workspace. Administrators and members of the Owners team can use [Force unlock](/docs/cloud/workspaces/settings.html#locking) to override this and unlock a workspace.
-- Download Sentinel mocks
-- Read and write variables
-- Read and write state versions
-- Read and write workspace settings (workspace admins only) — this includes general settings, notification configurations, run triggers, and more.
-- Set or remove workspace permissions for any team (workspace admins only)
-- Delete workspace (workspace admins only)
-- Manage workspace run tasks
-
-See [General Workspace Permissions][] above for details about specific permissions.
+- Read and write workspace settings. This includes general settings, notification configurations, run triggers, and more.
+- Set or remove workspace permissions for visible teams. Workspace admins cannot view or manage teams that are are [Secret](/cloud-docs/users-teams-organizations/teams#team-visibility), unless they are also organization owners.
+- Delete the workspace
 
 ### Fixed Permission Sets
 
